--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/LioraGardienAstralis/Maps/AstralisWorld1.AstralisWorld1
+GameDefaultMap=/Game/LioraGardienAstralis/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/LioraGardienAstralis/Core/BP_GameModeBase.BP_GameModeBase_C
 EditorStartupMap=/Game/LioraGardienAstralis/Maps/AstralisWorld1.AstralisWorld1
 
