--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=162943B64C29775229C32B94C6D15D69
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawbAsSource=false
